# adviser-cli-tool

./: .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  README.md  VISION.md  install.ps1  install.sh  package.json  pyproject.toml
adviser/: __init__.py  cli.py
adviser/config/: __init__.py  profiles.py  settings.py  snapshots.py
adviser/digest/: __init__.py  engine.py  planner.py
adviser/hardware/: __init__.py  catalog.yaml  detector.py  models.py
adviser/ingestion/: ingest.py  loaders.py  vision.py
adviser/llm/: airllm_provider.py  client.py  memory.py  router.py
adviser/mcp/: __init__.py  server.py
adviser/retrieval/: retriever.py
demo_corpus/: api_contract.md  architecture_spec.md  security_policy.md
goal/: codex_prompt_ingestion.md  codex_prompt_shell.md
goal/architecture/: PHASE2_EXECUTION_PLAN.md
scripts/: install-python.js
